--- a/apply.css
+++ b/apply.css
@@ -14,7 +14,8 @@ body{
     display: grid;
     grid-template-columns: 70% 10% 10%;
     column-gap: 5%;
-    padding-top: 5%;
+    padding-top: 6%;
+    padding: 3%;
     /* padding-bottom: 1%; */
     box-shadow: 12px 12px 12px black;
     position: sticky;
@@ -24,20 +25,20 @@ body{
 }
 #img1{
     margin-left: 5%;
-    width: 80%;
+    width: 60%;
     margin-top: -17%;
     margin-bottom: -3%;
 }
 #img1 img{
     /* clip-path: circle(50%); */
-    width: 70%;
-    height: 90%;
+    width: 80%;
+    margin-top: 15%;
 }
 #icon1,#icon2{
    font-size: 450%; 
    /* margin-left: -100%; */
    /* margin-bottom: 50%; */
-   margin-top: -3%;
+   margin-top: 15%;
 }
 #div2{
     color: white;
